--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 				background: transparent;
 			}
 		</style>
+        <script src="galaxian.js"></script>
 	</head>
+
 	<body onload="init()">
 		<!-- The canvas for the panning background -->
 		<canvas id="background" width="600" height="360">
 			Your browser does not support canvas. Please try again with a different browser.
 		</canvas>
-		<script src="space_shooter_part_one.js"></script>
+
 	</body>
 </html>
