PSK: added collision detection method and fixes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
          one forth the screen.) -->
 		<canvas id="ship" width="600" height="360">
 		</canvas>
+        <script src="quadtree.js"></script>
 		<script src="galaxian.js"></script>
 	</body>
 </html>
